on-process: Activity Scope search
